--- a/views/layout.haml
+++ b/views/layout.haml
@@ -12,20 +12,17 @@
     -# Always force latest IE rendering engine (even in intranet) & Chrome Frame
     -# Remove this if you use the .htaccess
     %meta{ "http-equiv" => "X-UA-Compatible", :content => "IE=edge,chrome=1" }/
-
-    %title
+    %title Aristotl
     %meta{ :name => "", :content => "" }/
     %meta{ :name => "", :content => "" }/
     %meta{ :name => "viewport", :content => "width=device-width, initial-scale=1.0" }/
-
     %link{ :href => "//fonts.googleapis.com/css?family=Vollkorn:400italic,400", :media => "all", :rel => "stylesheet"}/
     %link{ :href => "/css/vendor/semantic.min.css", :media => "all", :rel => "stylesheet"}/
     %link{ :href => "/css/vendor/normalize.css", :media => "all", :rel => "stylesheet"}/
-    %link{ :href => "/css/style.css", :media => "all", :rel => "stylesheet" }/
+    %link{ :href => "/css/main.css", :media => "all", :rel => "stylesheet" }/
+    %script{ :src => "/js/vendor/modernizr-2.6.2.min.js" }
 
-    %script{ :src => "/js/vendor/modernizr-2.0.6.min.js" }
-
-  %body{ :class => "app" }
+  %body{ :id => "aristotl", :class => "app" }
     =yield
 
     -#
