--- a/views/entry.haml
+++ b/views/entry.haml
@@ -1,5 +1,24 @@
+%menu{ :id => "sidebar", :class => "ui wide vertical styled sidebar borderless menu" }
+  %div.item
+    %div{ :id => "masthead", :class => ' ui icon header' }
+      <i class="circular book icon"></i>
+      = $site_title
+      %div{ :class => "sub header"}
+        = $site_tagline
+  %hr{ :class => "ui divider" }
+  %h2{ :class => "ui header item" }
+    = $entry_title
+    %div{ :class => "sub header" }
+      = $outlink
+  %div{ :class => "ui menu basic accordion"}
+    %div{ :id => "toc", :class => "fitted item" }
+      %div{ :class => "header title" } <i class="dropdown icon"></i> Table of Contents
+%nav{ :id => "nav", :class => "ui menu fixed" }
+  %a{ :class => "item launch" } <i class="icon list layout"></i> Menu
+  %div{ :class => "menu right" }
+    %a{ :class => "item", :href => "https://github.com/bsima/aristotl" } <i class="icon github"></i>
 #container
-  %header{ :class => "masthead segment" }
+  -#%header{ :class => "masthead segment" }
     %div{ :class => "container" }
       %div{ :class => "introduction" }
         %h1{ :class => "ui dividing header" }= $entry_title
