--- a/views/layout.haml
+++ b/views/layout.haml
@@ -16,6 +16,7 @@
     %meta{ :name => "", :content => "" }/
     %meta{ :name => "", :content => "" }/
     %meta{ :name => "viewport", :content => "width=device-width, initial-scale=1.0" }/
+    %link{ :href => "//fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Open+Sans:300italic,400,300,700", :media => "all", :rel => "stylesheet"}/
     %link{ :href => "//fonts.googleapis.com/css?family=Vollkorn:400italic,400", :media => "all", :rel => "stylesheet"}/
     %link{ :href => "/css/vendor/semantic.min.css", :media => "all", :rel => "stylesheet"}/
     %link{ :href => "/css/vendor/normalize.css", :media => "all", :rel => "stylesheet"}/
