--- a/views/entry.haml
+++ b/views/entry.haml
@@ -1,17 +1,23 @@
 %menu{ :id => "sidebar", :class => "ui wide vertical styled sidebar borderless menu" }
-  %div.item
-    %div{ :id => "masthead", :class => ' ui icon header' }
+  %div{ :class => "item", :id => "masthead" }
+    %a{ :class => 'ui header', :href => "/" }
       <i class="circular book icon"></i>
-      = $site_title
-      %div{ :class => "sub header"}
-        = $site_tagline
+      %div{ :class => "content" }
+        = $site_title
+        %div{ :class => "sub header" }
+          = $site_tagline
+    %div{ :class => "ui fluid three item small text menu" }
+      %a{ :class => "item", :href => "/" } Home
+      %a{ :class => "item", :href => "/" } About
+      %a{ :class => "item disabled" } Random
   %hr{ :class => "ui divider" }
   %h2{ :class => "ui header item" }
     = $entry_title
     %div{ :class => "sub header" }
       = $outlink
+  %a{ :class => "item", :href => "#" } Go to top.
   %div{ :class => "ui menu basic accordion"}
-    %div{ :id => "toc", :class => "fitted item" }
+    %div{ :id => "toc", :class => "horizontally fitted item" }
       %div{ :class => "header title" } <i class="dropdown icon"></i> Table of Contents
 %nav{ :id => "nav", :class => "ui menu fixed" }
   %a{ :class => "item launch" } <i class="icon list layout"></i> Menu
