slight change to index content

--- a/views/index.haml
+++ b/views/index.haml
@@ -20,5 +20,5 @@
         
         To use **Aristotl**, find an article you would like to read, copy the `/entries/entry-name` portion of the URL, and then paste it at the end of the URL of this page. For example, `http://plato.stanford.edu/entries/montaigne/` would become `http://www.aristotl.co/entries/montaigne/`.
         
-        If you would like to contribute to the development of **Aristotl**, please check it out [on GitHub](https://github.com/bsima/aristotl). Pull requests are very welcome!
-  %footer
+        If you would like to contribute to the development of **Aristotl**, please check it out [on GitHub](https://github.com/bsima/aristotl).
+%footer
