another slight change to index

--- a/views/index.haml
+++ b/views/index.haml
@@ -1,7 +1,7 @@
 .container
   %div{ :class => "ui form message", :id => "index-jump" }
     %div{ :class => "ui header" }
-      Read an article on the Stanford Encyclopedia of Philosophy:
+      Read an article from the Stanford Encyclopedia of Philosophy:
     %div{ :class => "inline field" }
       %label
         :markdown
