--- a/views/layout.haml
+++ b/views/layout.haml
@@ -38,9 +38,5 @@
     %script{ :src => "/js/main.js" }
 
     -#  asynchronous google analytics: mathiasbynens.be/notes/async-analytics-snippet
-    -#  change the UA-XXXXX-X to be your site's ID
     :javascript
-      var _gaq=[["_setAccount","UA-XXXXXXXX-1"],["_trackPageview"],["_trackPageLoadTime"]];
-      (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];g.async=1;
-      g.src=("https:"==location.protocol?"//ssl":"//www")+".google-analytics.com/ga.js";
-      s.parentNode.insertBefore(g,s)}(document,"script"));
+      (function(G,o,O,g,l){G.GoogleAnalyticsObject=O;G[O]||(G[O]=function(){(G[O].q=G[O].q||[]).push(arguments)});G[O].l=+new Date;g=o.createElement('script'),l=o.scripts[0];g.src='//www.google-analytics.com/analytics.js';l.parentNode.insertBefore(g,l)}(this,document,'ga'));ga('create','UA-47515709-1');ga('send','pageview')
