--- a/client/templates/base.html
+++ b/client/templates/base.html
@@ -10,6 +10,7 @@
         <!-- CSS -->
         <!-- Bootstrap -->
         <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+        <link rel="stylesheet" href="//bootswatch.com/flatly/bootstrap.min.css">
         <!-- Blog -->
         <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
 
@@ -21,7 +22,7 @@
     </head>
 
     <body>
-        <div class="navbar navbar-inverse navbar-static-top" role="navigation">
+        <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
             <div class="container">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -30,16 +31,18 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="{{ url_for('articles') }}">Artistotl</a>
+                    <a class="navbar-brand" href="/">Artistotl</a>
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
+                      <li><a href="#top">Back to top</a></li>
                     </ul>
                 </div>
             </div>
         </div>
 
-        <div class="container">
+        <div id="top"></div>
+        <div class="container" style="margin-top:60px">
             {% block content %}{% endblock %}
         </div>
     </body>
