--- a/client/templates/base.html
+++ b/client/templates/base.html
@@ -10,7 +10,7 @@
         <!-- CSS -->
         <!-- Bootstrap -->
         <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-        <link rel="stylesheet" href="//bootswatch.com/flatly/bootstrap.min.css">
+        <!-- <link rel="stylesheet" href="//bootswatch.com/flatly/bootstrap.min.css"> -->
         <!-- Blog -->
         <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
 
@@ -22,6 +22,7 @@
     </head>
 
     <body>
+        <div id="top" style="display:box;height:75px"></div>
         <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
             <div class="container">
                 <div class="navbar-header">
@@ -41,8 +42,7 @@
             </div>
         </div>
 
-        <div id="top"></div>
-        <div class="container" style="margin-top:60px">
+        <div class="container">
             {% block content %}{% endblock %}
         </div>
     </body>
