--- a/client/templates/base.html
+++ b/client/templates/base.html
@@ -45,5 +45,28 @@
         <div class="container">
             {% block content %}{% endblock %}
         </div>
+        <footer>
+          <center>
+            <p>Fair Use Notice</p>
+
+            <p>This site contains copyrighted material the use of which has not always been
+              specifically authorized by the copyright owner. We are making such material
+              available in our efforts to advance understanding of philosophical, religious,
+              ecclesiastical, political, human rights, scientific, and social justice issues,
+              etc. We believe this constitutes a 'fair use' of any such copyrighted material
+              as provided for in section 107 of the US Copyright Law. In accordance with Title
+              17 U.S.C. Section 107, the material on this site is distributed without profit
+              to those who have expressed an interest in receiving the included information
+              for comment, criticism, research, news reporting, teaching and scholarship
+              purposes.</p>
+
+            <p>For more information visit <a href="http://www.law.cornell.edu/uscode/text/17/107">this document.</a></p
+
+            <p>If you wish to use copyrighted material from this site for purposes of your
+              own that go beyond 'fair use', you must obtain permission from the copyright
+              owner.</p>
+
+          </center>
+        </footer>
     </body>
 </html>
